# portafolio

./: README.md
001__youtube_clone/: README.md  index.html  notas.txt
001__youtube_clone/css/: media.css  style.css
001__youtube_clone/js/: script.js
002__netflix_clone/: README.md  index.html  prepros.config
002__netflix_clone/css/: style.css
002__netflix_clone/js/: script.js
002__netflix_clone/pug/: _config.pug  _descargas.pug  _head.pug  _inicio.pug  _mixins.pug  _perfiles.pug  _profileInfo.pug  index.pug
002__netflix_clone/sass/: _contents.scss  _globales.scss  (+8 more)
002__platzi_scraper/: .gitignore  README.md  logos.py
003__shift_planning/: .gitignore  README.md  README_es.md  main.py  pyproject.toml
003__shift_planning/src/main/python/: bases.py  dataframes.py  metrics.py  model.py  schemas.py  utils.py  utils_schemas.py
003__shift_planning/src/main/resources/: 1674344240_employees.xlsx  1674345034_workplaces.xlsx  tables.xlsx
004__composer/: .gitignore
004__composer-dataproc-bq/: README.md  bigquery.sql  docker-compose.yaml
004__etl-composer/: .env.sample  dataproc_job.py
004__multicloud_etl/: .env.sample  .gitignore  README.md
005__build-workflows/: .env.sample  README.md  cloudbuild.yaml  workflow.yaml
005__gcp_ci_cd/: .env.sample  .gitignore  README.md  cloudbuild.yaml  docker-compose.yml
006__streamline_notify/: .env.sample  .gitignore  README.md
007__gcp-starter-template/: .gitignore  Dockerfile  README.md  cookiecutter.json  docker-compose.yml
007_case_tracker_automator/: README.md  main.py  requirements.txt  test.py  vars.py
(+90 files in other folders)
