[tool.poetry]
name = "turnos"
version = "0.1.0"
description = ""
authors = ["cogdiver"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
